alignment issue fixed

--- a/css/style2.css
+++ b/css/style2.css
@@ -553,8 +553,14 @@ h5 {
   box-shadow: 0px 10px 30px #2b56f524 !important;
 }
 
+.tab_content {
+  -webkit-box-shadow: 0px 2px 8px -6px #000000;
+  box-shadow: 0px 2px 8px -6px #000000;
+}
+
 .summary_table_body {
   background-color: #fff;
+  padding: 14px 0 !important;
 }
 
 table {
@@ -1219,7 +1225,7 @@ table.dataTable.no-footer {
   -moz-box-shadow: 0px 10px 30px #2b56f524;
   box-shadow: 0px 10px 30px #2b56f524;
   border-radius: 0px 0px 20px 20px;
-  height: 200px;
+  height: 204px;
   /* overflow-y: scroll; */
 }
 .team_two p,
